--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/MutualHelp.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/MutualHelp.cshtml
@@ -1,16 +1,12 @@
 ﻿@using Microsoft.AspNet.Identity;
 @model List<SocialMegazord2._0.Models.Post>
-@{
-    ViewBag.Title = "MutualHelp";
-}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../../Content/communities.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <title>Entertainment</title>
+    <title>Mutual Help</title>
 </head>
 <style>
     body {
@@ -36,9 +32,9 @@
                                     <a id="page_settings" href="#">My Profile</a>
                                     <div class="horizontal_menu">
                                         <ul>
-                                            <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
-                                            <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
-                                            <li>@Html.ActionLink("Posts", "Posts", "Post", new { area = "", value = "Post" })</li>
+                                            <li class="navLi">@Html.ActionLink("Create New Post", "Create", "Post", null, new { area = "" })</li>
+                                            <li class="navLi">@Html.ActionLink("Create New Event", "Create", "Event", null, new { area = "" })</li>
+                                            <li class="navLi">@Html.ActionLink("Events", "List", "Event", null, new { area = "" })</li>
                                         </ul>
                                     </div>
                                 </li>
