--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
@@ -77,29 +77,23 @@
             @Html.AntiForgeryToken()
 
             <div>
-                @*<label class="lable">Current Password: </label>*@
                 @Html.LabelFor(m => m.OldPassword, new { @class = "lable", @value = "Current Password:" })
-                @*<input type="password" class="content2" placeholder="">*@
                 @Html.TextBoxFor(m => m.OldPassword, new { @class = "content2", @type = "password", @placeholder = "" })
             </div>
             <br>
             <div>
-                @*<label class="lable">New Password: </label>*@
                 @Html.LabelFor(m => m.NewPassword, new { @class = "lable", @value = "New Password:" })
-                @*<input type="password" placeholder="">*@
                 @Html.TextBoxFor(m => m.NewPassword, new { @type = "password", @placeholder = "" })
             </div>
             <br>
             <div>
-                @*<label class="lable">Repeat Password: </label>*@
                 @Html.LabelFor(m => m.ConfirmPassword, new { @class = "lable", @value = "Confirm Password:" })
-                @*<input type="password" placeholder="">*@
                 @Html.TextBoxFor(m => m.ConfirmPassword, new { @type = "password", @placeholder = "" })
             </div>
             <br>
             <div>
 
-                <button type="button" class="submitButtons">Cancel</button>
+                @Html.ActionLink("Cancel", "Index", "Manage", null, new { @type = "button", @class = "submitButtons" })
 
                 <button class="submitButtons" type="submit">Update</button>
             </div>
