--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/Index.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/Index.cshtml
@@ -27,8 +27,8 @@
                                     <a id="page_settings" href="#">My Profile</a>
                                     <div class="horizontal_menu">
                                         <ul>
-                                            <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
-                                            <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
+                                          
+                                            <li>@Html.ActionLink("Events", "List", "Event", null, new { id = "eventsLink" })</li>
                                         </ul>
                                     </div>
                                 </li>
