--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/Science.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/Science.cshtml
@@ -1,16 +1,12 @@
 ﻿@using Microsoft.AspNet.Identity;
 @model List<SocialMegazord2._0.Models.Post>
-@{
-    ViewBag.Title = "Science";
-}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../../Content/communities.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <title>Entertainment</title>
+    <title>Science</title>
 </head>
 <style>
     body {
@@ -63,8 +59,8 @@
 
             <div id="navMyProfile">
                 <ul class="navUL">
-                    <li class="navLi"><a href="createnewpost.html">Create New Post</a></li>
-                    <li class="navLi">@Html.ActionLink("Create New Event", "Create", "Event", new { area = "" })</li>
+                    <li class="navLi">@Html.ActionLink("Create New Post", "Create", "Post", null, new { area = "" })</li>
+                    <li class="navLi">@Html.ActionLink("Create New Event", "Create", "Event", null, new { area = "" })</li>
                     <li class="navLi">@Html.ActionLink("Events", "List", "Event", null, new { area = "" })</li>
                 </ul>
             </div>
