--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Options.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Options.cshtml
@@ -1,15 +1,13 @@
 ﻿@using Microsoft.AspNet.Identity;
-@model List<SocialMegazord2._0.Models.Event>
-    @{
-        ViewBag.Title = "Edit Events";
-     }
+@model SocialMegazord2._0.Models.Event
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <title>Events</title>
+    <title>Event Options</title>
 </head>
 <body>
     @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
@@ -19,23 +17,23 @@
             <ul class="profile-wrapper">
                 <li>
                     <div class="profile">
-                        @Html.ActionLink(User.Identity.Name, "Index", "Home", null, new { area = "", @class = "name" })
+                        @Html.ActionLink(User.Identity.GetUserName(), "Index", "Home", new { area = "" }, new { @class = "name" })
                         <ul class="menu">
                             <li>
                                 <a id="page_settings" href="#">My Profile</a>
                                 <div class="horizontal_menu">
                                     <ul>
-                                        <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
+                                        <li>@Html.ActionLink("Interests", "Interests", "Manage", null, new { area = "", value = "Interests" })</li>
                                         <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
                                     </ul>
                                 </div>
                             </li>
                             <li>
-                                <a id="page_settings">@Html.ActionLink("Setting", "Index", "Manage")</a>
+                                <a id="page_settings" href="#">Settings</a>
                                 <div class="horizontal_menu" hidden>
                                     <ul>
                                         <li>@Html.ActionLink("Change Password", "Change Password", "Manage", new { area = "" })</li>
-                                        <li>@Html.ActionLink("Change User's Name", "Change Username", "Manage", new { area = "" })</li>
+                                        <li>@Html.ActionLink("Change Username", "Change Username", "Manage", new { area = "" })</li>
                                     </ul>
                                 </div>
                             </li>
@@ -60,36 +58,28 @@
             <li class="navLi">@Html.ActionLink("Create New Event", "Create", "Event", null, new { @area = "" })</li>
         </ul>
     </div>
-    @using (Html.BeginForm("List", "Event", FormMethod.Post))
+    @using (Html.BeginForm("Options", "Event", FormMethod.Post))
     {
         <div class="article_containter">
-            @foreach (var item in Model)
-            {
-                <article>
-                    <div class="row">
-                        <h2>@item.Title</h2>
-                        <small class="author">@item.Author.Name</small>
-                        <small class="author">@item.Type</small>
-                        <small class="author">@item.Place</small>
-                        <small class="author">@item.Date</small>
-                        <div class="article_position" style="color: black">
-                            @item.AdditionalContent
-                        </div>
-                        @if (User.IsInRole("Admin") || User.IsAuthor)
-                        {
-
-                        }
-                        <footer>
-                            @*<a href="eventOptions.html"><button class="submitButtons">Options &raquo;</button></a>*@
-                            @Html.ActionLink("Options", "Options", "Event", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
-                        </footer>
+            <article>
+                <div class="row">
+                    <h2>@Model.Title</h2>
+                    <small class="author">@Model.Author.Name</small>
+                    <small class="author">@Model.Type</small>
+                    <small class="author">@Model.Place</small>
+                    <small class="author">@Model.Date </small>
+                    <div class="article_position" style="color: black">
+                        @Model.AdditionalContent
                     </div>
-                </article>
-            }
-
+                    <footer>
+                        @Html.ActionLink("Cancel", "List", "Event", null, new { @type = "button", @class = "submitButtons" })
+                        @Html.ActionLink("Delete", "List", "Event", null, new { @type = "submit", @style = "color: red", @class = "submitButtons" })
+                        @Html.ActionLink("Edit", "Edit", "Event", null, new { @type = "submit", @class = "submitButtons" })
+                    </footer>
+                </div>
+            </article>
         </div>
     }
-
     <footer>
         <div class="the_footer">
             <h3>© 2016 - SocialMegazord inc.</h3>
