--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Create.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Create.cshtml
@@ -13,43 +13,45 @@
 
 <body>
 
-    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
-    {
-        @Html.AntiForgeryToken()
-        <div id="profile_div">
-            <ul class="profile-wrapper">
-                <li>
-                    <div class="profile">
-                        @Html.ActionLink(User.Identity.GetUserName(), "Index", "Home", new { area = "" }, new { @class = "name" })
-                        <ul class="menu">
-                            <li>
-                                <a id="page_settings" href="#">My Profile</a>
-                                <div class="horizontal_menu">
-                                    <ul>
-                                        <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
-                                        <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li>
-                                <a id="page_settings" href="#">Settings</a>
-                                <div class="horizontal_menu" hidden>
-                                    <ul>
-                                        <li>@Html.ActionLink("Change Password", "Change Password", "Manage", new { area = "" })</li>
-                                        <li>@Html.ActionLink("Change Username", "Change Username", "Manage", new { area = "" })</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            @using (Html.BeginForm("LogOff", "Account", FormMethod.Post))
-                            {
-                                <li><a href="javascript:document.getElementById('profile_div').submit()">Log Off</a></li>
-                            }
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    }
+        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
+        {
+            @Html.AntiForgeryToken()
+            <div id="profile_div">
+                <ul class="profile-wrapper">
+                    <li>
+                        <div class="profile">
+                            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Home", new { area = "" }, new { @class = "name" })
+                            <ul class="menu">
+                                <li>
+                                    <a id="page_settings" href="#">My Profile</a>
+                                    <div class="horizontal_menu">
+                                        <ul>
+                                            <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
+                                            <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a id="page_settings" href="#">Settings</a>
+                                    <div class="horizontal_menu" hidden>
+                                        <ul>
+                                            <li>@Html.ActionLink("Change Password", "Change Password", "Manage", new { area = "" })</li>
+                                            <li>@Html.ActionLink("Change Username", "Change Username", "Manage", new { area = "" })</li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                @using (Html.BeginForm("LogOff", "Account", FormMethod.Post))
+                                {
+                                    <li><a href="javascript:document.getElementById('profile_div').submit()">Log Off</a></li>
+                                }
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        }
+    
+  
     <div id="contents">
         @Html.ActionLink(" ", "Entertainment", "Comunities", null, new { @id = "button1", @class = "button button1" })
         @Html.ActionLink(" ", "Science", "Comunities", null, new { @id = "button3", @class = "button button3" })
@@ -97,7 +99,7 @@
 
         </div>
             @Html.ActionLink("Cancel", "List" , "Event",null , new { @type = "button", @class="submitButtons"})
-            @Html.ActionLink("Create", "List", "Event", null, new { @type = "submit", @class = "submitButtons" })
+            <input type="submit" class="submitButtons" value="Create" />
     }
         <footer>
             <div class="the_footer">
