--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Create.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Create.cshtml
@@ -85,8 +85,8 @@
             </div>
             <br>
         </div>
-       @Html.ActionLink("Cancel", "Entertainment", "Communities", null, new { @type = "button", @class = "submitButtons" })
-        @Html.ActionLink("Create", "Entertainment", "Communities", null, new { @type = "submit", @class = "submitButtons" })
+       @Html.ActionLink("Cancel", "Entertainment", "Comunities", null, new { @type = "button", @class = "submitButtons" })
+        <input type="submit" value="Create" class="submitButtons"/>
     }
     <footer>
         <div class="the_footer">
