--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/Science.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/Science.cshtml
@@ -1,5 +1,9 @@
 ﻿@using Microsoft.AspNet.Identity;
 @model List<SocialMegazord2._0.Models.Post>
+@{
+    ViewBag.Title = "Science";
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -59,8 +63,8 @@
 
             <div id="navMyProfile">
                 <ul class="navUL">
-                    <li class="navLi">@Html.ActionLink("Create New Post", "Create", "Post", null, new { area = "" })</li>
-                    <li class="navLi">@Html.ActionLink("Create New Event", "Create", "Event", null, new { area = "" })</li>
+                    <li class="navLi"><a href="createnewpost.html">Create New Post</a></li>
+                    <li class="navLi">@Html.ActionLink("Create New Event", "Create", "Event", new { area = "" })</li>
                     <li class="navLi">@Html.ActionLink("Events", "List", "Event", null, new { area = "" })</li>
                 </ul>
             </div>
@@ -100,6 +104,10 @@
                             @*<a href="eventOptions.html"><button cl
                                 <div class="article_containter">
                                    ass="submitButtons">Options &raquo;</button></a>*@
+                            @if (User.IsInRole("Admin") || User.IsInRole("Author"))
+                            {
+
+                            }
                             @Html.ActionLink("Options", "Options", "Event", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
                         </footer>
                     </div>
