--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
@@ -30,9 +30,9 @@
                                         <a id="page_settings" href="#">Admin Functionalities</a>
                                         <div class="horizontal_menu">
                                             <ul>
-                                                <li>@Html.ActionLink("Edit Users", "EditUsers", "Admin", null, htmlAttributes: new { id = "editUsersLink" })</li>
-                                                <li>@Html.ActionLink("Edit Posts", "EditPosts", "Admin", null, new { area = "", value = "editPostsLink" })</li>
-                                                <li>@Html.ActionLink("Edit Events", "EditEvents", "Admin", null, htmlAttributes: new { id = "editEventsLink" })</li>
+                                                <li>@Html.ActionLink("Edit Users", "EditUsers", "User", null, htmlAttributes: new { id = "editUsersLink" })</li>
+                                                <li>@Html.ActionLink("Edit Posts", "EditPosts", "User", null, new { area = "", value = "editPostsLink" })</li>
+                                                <li>@Html.ActionLink("Edit Events", "EditEvents", "User", null, htmlAttributes: new { id = "editEventsLink" })</li>
                                             </ul>
                                         </div>
                                     </li>
