Adim Panel now Iisting Other user atributes

--- a/SocialMegazord2.0/SocialMegazord2.0/Views/User/EditUsers.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/User/EditUsers.cshtml
@@ -69,6 +69,8 @@
                 <article>
                     <div class="row">
                         <p>@item.Name</p>
+                        <p>@item.Email</p>
+                        <p>@item.Id</p>
                         </div>
                         <footer>
                             @*<a href="eventOptions.html"><button cl
